Ajuste no texto da home

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <section class="hero">
   <div>
     <h1>Iluminando sua presença digital</h1>
-    <p>Sites modernos, rápidos e profissionais.</p>
+    <p>Sites modernos, rápidos e profissionais para o seu negócio.</p>
     <a href="#contato" class="btn">Falar Conosco</a>
   </div>
 </section>
