--- a/index.html
+++ b/index.html
@@ -128,7 +128,6 @@
 
 </div>
 
-
 <section id="contato">
   <h2 class="titulo">Contato</h2>
 
@@ -166,7 +165,66 @@
   </div>
 </section>
 
+<section id="faq">
+  <h2 class="titulo">Dúvidas Frequentes</h2>
 
+  <div class="faq-container">
+
+    <div class="faq-item">
+      <button class="faq-pergunta">
+        Quanto custa para criar um site?
+        <span>+</span>
+      </button>
+      <div class="faq-resposta">
+        <p>
+          O valor depende do tipo de site e das funcionalidades necessárias.
+          Trabalhamos com soluções sob medida para cada negócio.
+          Entre em contato para receber um orçamento personalizado.
+        </p>
+      </div>
+    </div>
+
+    <div class="faq-item">
+      <button class="faq-pergunta">
+        Em quanto tempo o site fica pronto?
+        <span>+</span>
+      </button>
+      <div class="faq-resposta">
+        <p>
+          O prazo médio varia entre 7 e 20 dias, dependendo da complexidade do projeto
+          e da rapidez no envio das informações pelo cliente.
+        </p>
+      </div>
+    </div>
+
+    <div class="faq-item">
+      <button class="faq-pergunta">
+        O site funciona no celular?
+        <span>+</span>
+      </button>
+      <div class="faq-resposta">
+        <p>
+          Sim. Todos os sites desenvolvidos pela Ilumen são responsivos,
+          funcionando perfeitamente em celulares, tablets e computadores.
+        </p>
+      </div>
+    </div>
+
+    <div class="faq-item">
+      <button class="faq-pergunta">
+        Depois de pronto, vocês dão suporte?
+        <span>+</span>
+      </button>
+      <div class="faq-resposta">
+        <p>
+          Sim. Oferecemos suporte e manutenção para ajustes, atualizações
+          e melhorias após a entrega do site.
+        </p>
+      </div>
+    </div>
+
+  </div>
+</section>
 
 <footer>
   © 2026 Ilumen - Todos os direitos reservados
