troca de endereço email

--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
 
       <div class="contato-item">
         <span class="contato-label">Email</span>
-        <a class="contato-link" href="mailto:contato@ilumen.com.br">
-          contato@ilumen.com.br
+        <a class="contato-link" href="mailto:ilumenweb@gmail.com">
+          ilumenweb@gmail.com
         </a>
       </div>
 
@@ -160,7 +160,6 @@
 
     <div class="contato-acoes">
       <a class="btn" href="https://wa.me/5531995370951" target="_blank">Chamar no WhatsApp</a>
-      <a class="btn btn-outline" href="mailto:contato@ilumen.com.br">Enviar Email</a>
     </div>
   </div>
 </section>
